Btn whitespace fix

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -75,7 +75,7 @@ h1 {
   border: $purple;
 }
 
-a.btn {
+.btn {
   white-space: normal !important;
 }
 
